--- a/ci/perf-test-cloudbuild.yaml
+++ b/ci/perf-test-cloudbuild.yaml
@@ -34,15 +34,23 @@ steps:
       - ${_TEST_CLUSTER_LOCATION}
       - ${_REGISTRY}
       - ${_TEST_PROJECT_ID}
+      - ${_TEST_FLEET_REPLICAS}
+      - ${_TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC}
+      - ${_TEST_BUFFER_SIZE}
+      - ${_TEST_MIN_REPLICAS}
+      - ${_TEST_MAX_REPLICAS}
+      - ${_TEST_DURATION}
+      - ${_TEST_CLIENTS}
+      - ${_TEST_INTERVAL}
     id: perf-test
     waitFor:
       - build-perf
   
 substitutions:
-  _TEST_CLUSTER_NAME: standard-performance-test-cluster-1-26
-  _TEST_CLUSTER_LOCATION: us-central1
+  _TEST_CLUSTER_NAME: standard-e2e-test-cluster-1-27
+  _TEST_CLUSTER_LOCATION: us-east1
   _REGISTRY: us-docker.pkg.dev/agones-images/ci
-  _TEST_PROJECT_ID: agones-e2e-1
+  _TEST_PROJECT_ID: gongmax-gke-test
   _TEST_FLEET_REPLICAS: "10"
   _TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC: "60"
   _TEST_BUFFER_SIZE: "10"
