--- a/ci/perf-test-cloudbuild.yaml
+++ b/ci/perf-test-cloudbuild.yaml
@@ -15,12 +15,22 @@ steps:
     id: build-make-docker
     args: [build, -f, Dockerfile.build, -t, make-docker, .]  # we need docker and make to run everything.
 
+  # #
+  # # build the performance test runner
+  # #
+  # - name: gcr.io/cloud-builders/docker
+  #   args: [build, -f, Dockerfile, -t, perf-runner, .]
+  #   dir: build/perf-test-image
+  #   id: build-perf
+  #   waitFor:
+  #     - build-make-docker
+
   #
   # build the performance test runner
   #
   - name: gcr.io/cloud-builders/docker
-    args: [build, -f, Dockerfile, -t, perf-runner, .]
-    dir: build/perf-test-image
+    args: [build, -f, Dockerfile, -t, build-image, .]
+    dir: build/build-image
     id: build-perf
     waitFor:
       - build-make-docker
@@ -28,22 +38,91 @@ steps:
   #
   # Run the performance tests with default feature gates setting
   #
-  - name: perf-runner
-    args:
-      - ${_TEST_CLUSTER_NAME}
-      - ${_TEST_CLUSTER_LOCATION}
-      - ${_REGISTRY}
-      - ${_TEST_PROJECT_ID}
-      - ${_TEST_FLEET_REPLICAS}
-      - ${_TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC}
-      - ${_TEST_BUFFER_SIZE}
-      - ${_TEST_MAX_REPLICAS}
-      - ${_TEST_DURATION}
-      - ${_TEST_CLIENTS}
-      - ${_TEST_INTERVAL}
+  - name: build-image
+    script: |
+        #!/usr/bin/env bash
+        mkdir -p /go/src/agones.dev/
+        ln -s /workspace /go/src/agones.dev/agones
+        cd /go/src/agones.dev/agones/build
+
+        gcloud config set project ${_TEST_PROJECT_ID}
+        gcloud container clusters get-credentials ${_TEST_CLUSTER_NAME} \
+                --zone=${_TEST_CLUSTER_LOCATION} --project=${_TEST_PROJECT_ID}
+
+        DOCKER_RUN= make install REGISTRY='"'${_REGISTRY}'"' 
+
+        cd /go/src/agones.dev/agones/test/load/allocation
+
+        # use the input values to populate the yaml files for fleet and autoscaler, and then apply them
+        cp performance-test-fleet-template.yaml performance-test-fleet.yaml
+        cp performance-test-autoscaler-template.yaml performance-test-autoscaler.yaml
+        cp performance-test-variable-template.txt performance-test-variable.txt
+
+        sed -i 's/REPLICAS_REPLACEMENT/'${_TEST_FLEET_REPLICAS}'/g' performance-test-fleet.yaml
+        sed -i 's/AUTOMATIC_SHUTDOWN_DELAY_SEC_REPLACEMENT/'${_TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC}'/g' performance-test-fleet.yaml
+
+        sed -i 's/BUFFER_SIZE_REPLACEMENT/'${_TEST_BUFFER_SIZE}'/g' performance-test-autoscaler.yaml
+        sed -i 's/MIN_REPLICAS_REPLACEMENT/'${_TEST_FLEET_REPLICAS}'/g' performance-test-autoscaler.yaml
+        sed -i 's/MAX_REPLICAS_REPLACEMENT/'${_TEST_MAX_REPLICAS}'/g' performance-test-autoscaler.yaml
+
+        sed -i 's/DURATION_REPLACEMENT/'${_TEST_DURATION}'/g' performance-test-variable.txt
+        sed -i 's/CLIENTS_REPLACEMENT/'${_TEST_CLIENTS}'/g' performance-test-variable.txt
+        sed -i 's/INTERVAL_REPLACEMENT/'${_TEST_INTERVAL}'/g' performance-test-variable.txt
+
+        kubectl apply -f performance-test-fleet.yaml
+        kubectl apply -f performance-test-autoscaler.yaml
+
+        # wait for the fleet to be ready
+        while [ $(kubectl get -f performance-test-fleet.yaml -o=jsonpath='{.spec.replicas}') != $(kubectl get -f performance-test-fleet.yaml -o=jsonpath='{.status.readyReplicas}') ]
+        do
+            sleep 1
+        done
+
+        cat performance-test-fleet.yaml
+        cat performance-test-autoscaler.yaml
+        cat performance-test-variable.txt
+
+        printf "\nStart testing."
+        ./runScenario.sh performance-test-variable.txt
+        printf "\nFinish testing."
+
+        rm performance-test-fleet.yaml performance-test-autoscaler.yaml performance-test-variable.txt
+
+    # args:
+    #   - ${_TEST_CLUSTER_NAME}
+    #   - ${_TEST_CLUSTER_LOCATION}
+    #   - ${_REGISTRY}
+    #   - ${_TEST_PROJECT_ID}
+    #   - ${_TEST_FLEET_REPLICAS}
+    #   - ${_TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC}
+    #   - ${_TEST_BUFFER_SIZE}
+    #   - ${_TEST_MAX_REPLICAS}
+    #   - ${_TEST_DURATION}
+    #   - ${_TEST_CLIENTS}
+    #   - ${_TEST_INTERVAL}
     id: perf-test
     waitFor:
       - build-perf
+
+  # #
+  # # Run the performance tests with default feature gates setting
+  # #
+  # - name: perf-runner
+  #   args:
+  #     - ${_TEST_CLUSTER_NAME}
+  #     - ${_TEST_CLUSTER_LOCATION}
+  #     - ${_REGISTRY}
+  #     - ${_TEST_PROJECT_ID}
+  #     - ${_TEST_FLEET_REPLICAS}
+  #     - ${_TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC}
+  #     - ${_TEST_BUFFER_SIZE}
+  #     - ${_TEST_MAX_REPLICAS}
+  #     - ${_TEST_DURATION}
+  #     - ${_TEST_CLIENTS}
+  #     - ${_TEST_INTERVAL}
+  #   id: perf-test
+  #   waitFor:
+  #     - build-perf
 
 substitutions:
   _TEST_CLUSTER_NAME: standard-performance-test-cluster-1-27
