--- a/ci/perf-test-cloudbuild.yaml
+++ b/ci/perf-test-cloudbuild.yaml
@@ -32,77 +32,84 @@ steps:
     id: pull-build-image 
     dir: build 
     env: ['REGISTRY=${_REGISTRY}'] 
-    args: [pull-build-image] 
+    args: [pull-build-image]
+
+
+  - name: make-docker 
+    id: run-test 
+    dir: build 
+    args: [test-performance]
+    waitFor: [pull-build-image]
 
   #
   # Run the performance tests with default feature gates setting
   #
-  - name: agones-build:3f13293bd8
-    script: |
-        #!/usr/bin/env bash
-        mkdir -p /go/src/agones.dev/
-        ln -s /workspace /go/src/agones.dev/agones
-        cd /go/src/agones.dev/agones/build
+  # - name: agones-build:3f13293bd8
+  #   script: |
+  #       #!/usr/bin/env bash
+  #       mkdir -p /go/src/agones.dev/
+  #       ln -s /workspace /go/src/agones.dev/agones
+  #       cd /go/src/agones.dev/agones/build
 
-        gcloud config set project ${_TEST_PROJECT_ID}
-        gcloud container clusters get-credentials ${_TEST_CLUSTER_NAME} \
-                --zone=${_TEST_CLUSTER_LOCATION} --project=${_TEST_PROJECT_ID}
+  #       gcloud config set project ${_TEST_PROJECT_ID}
+  #       gcloud container clusters get-credentials ${_TEST_CLUSTER_NAME} \
+  #               --zone=${_TEST_CLUSTER_LOCATION} --project=${_TEST_PROJECT_ID}
 
-        DOCKER_RUN= make install REGISTRY='"'${_REGISTRY}'"' 
+  #       DOCKER_RUN= make install REGISTRY='"'${_REGISTRY}'"' 
 
-        cd /go/src/agones.dev/agones/test/load/allocation
+  #       cd /go/src/agones.dev/agones/test/load/allocation
 
-        # use the input values to populate the yaml files for fleet and autoscaler, and then apply them
-        cp performance-test-fleet-template.yaml performance-test-fleet.yaml
-        cp performance-test-autoscaler-template.yaml performance-test-autoscaler.yaml
-        cp performance-test-variable-template.txt performance-test-variable.txt
+  #       # use the input values to populate the yaml files for fleet and autoscaler, and then apply them
+  #       cp performance-test-fleet-template.yaml performance-test-fleet.yaml
+  #       cp performance-test-autoscaler-template.yaml performance-test-autoscaler.yaml
+  #       cp performance-test-variable-template.txt performance-test-variable.txt
 
-        sed -i 's/REPLICAS_REPLACEMENT/'${_TEST_FLEET_REPLICAS}'/g' performance-test-fleet.yaml
-        sed -i 's/AUTOMATIC_SHUTDOWN_DELAY_SEC_REPLACEMENT/'${_TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC}'/g' performance-test-fleet.yaml
+  #       sed -i 's/REPLICAS_REPLACEMENT/'${_TEST_FLEET_REPLICAS}'/g' performance-test-fleet.yaml
+  #       sed -i 's/AUTOMATIC_SHUTDOWN_DELAY_SEC_REPLACEMENT/'${_TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC}'/g' performance-test-fleet.yaml
 
-        sed -i 's/BUFFER_SIZE_REPLACEMENT/'${_TEST_BUFFER_SIZE}'/g' performance-test-autoscaler.yaml
-        sed -i 's/MIN_REPLICAS_REPLACEMENT/'${_TEST_FLEET_REPLICAS}'/g' performance-test-autoscaler.yaml
-        sed -i 's/MAX_REPLICAS_REPLACEMENT/'${_TEST_MAX_REPLICAS}'/g' performance-test-autoscaler.yaml
+  #       sed -i 's/BUFFER_SIZE_REPLACEMENT/'${_TEST_BUFFER_SIZE}'/g' performance-test-autoscaler.yaml
+  #       sed -i 's/MIN_REPLICAS_REPLACEMENT/'${_TEST_FLEET_REPLICAS}'/g' performance-test-autoscaler.yaml
+  #       sed -i 's/MAX_REPLICAS_REPLACEMENT/'${_TEST_MAX_REPLICAS}'/g' performance-test-autoscaler.yaml
 
-        sed -i 's/DURATION_REPLACEMENT/'${_TEST_DURATION}'/g' performance-test-variable.txt
-        sed -i 's/CLIENTS_REPLACEMENT/'${_TEST_CLIENTS}'/g' performance-test-variable.txt
-        sed -i 's/INTERVAL_REPLACEMENT/'${_TEST_INTERVAL}'/g' performance-test-variable.txt
+  #       sed -i 's/DURATION_REPLACEMENT/'${_TEST_DURATION}'/g' performance-test-variable.txt
+  #       sed -i 's/CLIENTS_REPLACEMENT/'${_TEST_CLIENTS}'/g' performance-test-variable.txt
+  #       sed -i 's/INTERVAL_REPLACEMENT/'${_TEST_INTERVAL}'/g' performance-test-variable.txt
 
-        kubectl apply -f performance-test-fleet.yaml
-        kubectl apply -f performance-test-autoscaler.yaml
+  #       kubectl apply -f performance-test-fleet.yaml
+  #       kubectl apply -f performance-test-autoscaler.yaml
 
-        # wait for the fleet to be ready
-        while [ $(kubectl get -f performance-test-fleet.yaml -o=jsonpath='{.spec.replicas}') != $(kubectl get -f performance-test-fleet.yaml -o=jsonpath='{.status.readyReplicas}') ]
-        do
-            sleep 1
-        done
+  #       # wait for the fleet to be ready
+  #       while [ $(kubectl get -f performance-test-fleet.yaml -o=jsonpath='{.spec.replicas}') != $(kubectl get -f performance-test-fleet.yaml -o=jsonpath='{.status.readyReplicas}') ]
+  #       do
+  #           sleep 1
+  #       done
 
-        cat performance-test-fleet.yaml
-        cat performance-test-autoscaler.yaml
-        cat performance-test-variable.txt
+  #       cat performance-test-fleet.yaml
+  #       cat performance-test-autoscaler.yaml
+  #       cat performance-test-variable.txt
 
-        printf "\nStart testing."
-        ./runScenario.sh performance-test-variable.txt
-        printf "\nFinish testing."
+  #       printf "\nStart testing."
+  #       ./runScenario.sh performance-test-variable.txt
+  #       printf "\nFinish testing."
 
-        rm performance-test-fleet.yaml performance-test-autoscaler.yaml performance-test-variable.txt
+  #       rm performance-test-fleet.yaml performance-test-autoscaler.yaml performance-test-variable.txt
 
-    # args:
-    #   - ${_TEST_CLUSTER_NAME}
-    #   - ${_TEST_CLUSTER_LOCATION}
-    #   - ${_REGISTRY}
-    #   - ${_TEST_PROJECT_ID}
-    #   - ${_TEST_FLEET_REPLICAS}
-    #   - ${_TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC}
-    #   - ${_TEST_BUFFER_SIZE}
-    #   - ${_TEST_MAX_REPLICAS}
-    #   - ${_TEST_DURATION}
-    #   - ${_TEST_CLIENTS}
-    #   - ${_TEST_INTERVAL}
-    automapSubstitutions: true
-    id: perf-test
-    # waitFor:
-    #   - build-perf
+  #   # args:
+  #   #   - ${_TEST_CLUSTER_NAME}
+  #   #   - ${_TEST_CLUSTER_LOCATION}
+  #   #   - ${_REGISTRY}
+  #   #   - ${_TEST_PROJECT_ID}
+  #   #   - ${_TEST_FLEET_REPLICAS}
+  #   #   - ${_TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC}
+  #   #   - ${_TEST_BUFFER_SIZE}
+  #   #   - ${_TEST_MAX_REPLICAS}
+  #   #   - ${_TEST_DURATION}
+  #   #   - ${_TEST_CLIENTS}
+  #   #   - ${_TEST_INTERVAL}
+  #   automapSubstitutions: true
+  #   id: perf-test
+  #   # waitFor:
+  #   #   - build-perf
 
   # #
   # # Run the performance tests with default feature gates setting
