--- a/ci/perf-test-cloudbuild.yaml
+++ b/ci/perf-test-cloudbuild.yaml
@@ -40,6 +40,18 @@ steps:
     dir: build 
     args: [test-performance]
     waitFor: [pull-build-image]
+    env:
+    - 'TEST_CLUSTER_NAME=${_TEST_CLUSTER_NAME}'
+    - 'TEST_CLUSTER_LOCATION=${_TEST_CLUSTER_LOCATION}'
+    - 'REGISTRY=${_REGISTRY}'
+    - 'TEST_PROJECT_ID=${_TEST_PROJECT_ID}'
+    - 'TEST_FLEET_REPLICAS=${_TEST_FLEET_REPLICAS}'
+    - 'TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC=${_TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC}'
+    - 'TEST_BUFFER_SIZE=${_TEST_BUFFER_SIZE}'
+    - 'TEST_MAX_REPLICAS=${_TEST_MAX_REPLICAS}'
+    - 'TEST_DURATION=${_TEST_DURATION}'
+    - 'TEST_CLIENTS=${_TEST_CLIENTS}'
+    - 'TEST_INTERVAL=${_TEST_INTERVAL}'
 
   #
   # Run the performance tests with default feature gates setting
