--- a/ci/perf-test-cloudbuild.yaml
+++ b/ci/perf-test-cloudbuild.yaml
@@ -31,7 +31,7 @@ steps:
   - name: make-docker 
     id: pull-build-image 
     dir: build 
-    env: ['REGISTRY=${_REGISTRY}', 'build_tag=performance-test-haha', 'LOCAL_TAG=performance-test-xixi']
+    env: ['REGISTRY=${_REGISTRY}', 'CUSTOM_LOCAL_TAG=performance-test-haha']
     args: [pull-build-image]
 
 
