--- a/ci/perf-test-cloudbuild.yaml
+++ b/ci/perf-test-cloudbuild.yaml
@@ -45,7 +45,9 @@ steps:
   #
   - name: performance-test
     dir: build
-    args: [./performance-test.sh]
+    args: 
+    - ./performance-test.sh
+    - ${_TEST_CLUSTER_NAME}
     # entrypoint: 
     # script: |
     #     #!/usr/bin/env bash
