--- a/ci/perf-test-cloudbuild.yaml
+++ b/ci/perf-test-cloudbuild.yaml
@@ -63,10 +63,10 @@ steps:
       - pull-build-image
 
 substitutions:
-  _TEST_CLUSTER_NAME: standard-performance-test-cluster-1-27
-  _TEST_CLUSTER_LOCATION: us-central1
+  _TEST_CLUSTER_NAME: standard-e2e-test-cluster-1-27
+  _TEST_CLUSTER_LOCATION: us-east1
   _REGISTRY: us-docker.pkg.dev/agones-images/ci
-  _TEST_PROJECT_ID: agones-images
+  _TEST_PROJECT_ID: gongmax-gke-dev
   _TEST_FLEET_REPLICAS: "10000"
   _TEST_AUTOMATIC_SHUTDOWN_DELAY_SEC: "60"
   _TEST_BUFFER_SIZE: "9900"
