--- a/ci/e2e-test-cloudbuild.yaml
+++ b/ci/e2e-test-cloudbuild.yaml
@@ -28,35 +28,35 @@ steps:
   #
   # Run the e2e tests with FeatureGates inverted compared to Stable
   #
-  - name: e2e-runner
-    args:
-      - ${_FEATURE_WITH_GATE}
-      - ${_CLOUD_PRODUCT}
-      - ${_TEST_CLUSTER_NAME}
-      - ${_TEST_CLUSTER_LOCATION}
-      - ${_REGISTRY}
-    id: e2e-feature-gates
-    waitFor:
-      - build-e2e
+#   - name: e2e-runner
+#     args:
+#       - ${_FEATURE_WITH_GATE}
+#       - ${_CLOUD_PRODUCT}
+#       - ${_TEST_CLUSTER_NAME}
+#       - ${_TEST_CLUSTER_LOCATION}
+#       - ${_REGISTRY}
+#     id: e2e-feature-gates
+#     waitFor:
+#       - build-e2e
 
-  #
-  # Run the e2e tests without FeatureGates
-  #
-  - name: e2e-runner
-    args:
-      - ${_FEATURE_WITHOUT_GATE}
-      - ${_CLOUD_PRODUCT}
-      - ${_TEST_CLUSTER_NAME}
-      - ${_TEST_CLUSTER_LOCATION}
-      - ${_REGISTRY}
-    id: e2e-stable
-    waitFor: [e2e-feature-gates]
-tags:
-  - e2e-test
-  - cluster-${_TEST_CLUSTER_NAME}
-  - location-${_TEST_CLUSTER_LOCATION}
-  - commit-${_PARENT_COMMIT_SHA}
-  - started-by-${_PARENT_BUILD_ID}
-timeout: 5400s  # 1.5h
-queueTtl: 7200s  # 2h // only one set of e2es should be running at once
-logsBucket: gs://agones-build-logs
+#   #
+#   # Run the e2e tests without FeatureGates
+#   #
+#   - name: e2e-runner
+#     args:
+#       - ${_FEATURE_WITHOUT_GATE}
+#       - ${_CLOUD_PRODUCT}
+#       - ${_TEST_CLUSTER_NAME}
+#       - ${_TEST_CLUSTER_LOCATION}
+#       - ${_REGISTRY}
+#     id: e2e-stable
+#     waitFor: [e2e-feature-gates]
+# tags:
+#   - e2e-test
+#   - cluster-${_TEST_CLUSTER_NAME}
+#   - location-${_TEST_CLUSTER_LOCATION}
+#   - commit-${_PARENT_COMMIT_SHA}
+#   - started-by-${_PARENT_BUILD_ID}
+# timeout: 5400s  # 1.5h
+# queueTtl: 7200s  # 2h // only one set of e2es should be running at once
+# logsBucket: gs://agones-build-logs
