--- a/ci/e2e-test-cloudbuild.yaml
+++ b/ci/e2e-test-cloudbuild.yaml
@@ -19,7 +19,7 @@ steps:
   #
   # build the e2e test runner
   #
-  - name: gcr.io/cloud-builders/gcloud
+  - name: docker
     args: [build, -f, Dockerfile, -t, e2e-runner, .]
     dir: build/e2e-image
     id: build-e2e
